# inif-rag-system

./: .env.example  LICENSE  README.md  compose.yaml  pyproject.toml
data/: faq_qa_pairs.csv
src/inif_rag/: normalize.py
