[project]
name = "inif-rag-system"
version = "0.1.0"
description = "A Persian-language RAG system over the Iran National Innovation Fund's FAQ, using Postgres + pgvector for retrieval and generation."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hazm>=0.12.1",
    "pandas>=3.0.3",
    "psycopg[binary]>=3.3.4",
    "sentence-transformers>=5.6.0",
]
